--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "fs": "^0.0.1-security",
+    "https": "^1.0.0",
     "mongoose": "^8.8.0",
     "ws": "^8.18.0"
   },
