--- a/backend/package.json
+++ b/backend/package.json
@@ -14,7 +14,9 @@
     "express": "^4.21.1",
     "fs": "^0.0.1-security",
     "https": "^1.0.0",
+    "ipfs-http-client": "^50.1.2",
     "mongoose": "^8.8.0",
+    "node-cache": "^5.1.2",
     "ws": "^8.18.0"
   },
   "packageManager": "pnpm@9.12.2+sha512.22721b3a11f81661ae1ec68ce1a7b879425a1ca5b991c975b074ac220b187ce56c708fe5db69f4c962c989452eee76c82877f4ee80f474cebd61ee13461b6228"
