change credit key

--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "fs": "^0.0.1-security",
     "https": "^1.0.0",
     "ipfs-http-client": "^50.1.2",
+    "kubo-rpc-client": "^5.0.2",
     "mongoose": "^8.8.0",
     "node-cache": "^5.1.2",
     "ws": "^8.18.0"
