--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,10 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@helia/core": "^0.0.0",
+    "@helia/unixfs": "^4.0.0",
     "axios": "^1.7.7",
+    "datastore-core": "^10.0.2",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "fs": "^0.0.1-security",
@@ -19,6 +22,7 @@
     "ipfs-http-client": "^50.1.2",
     "kubo-rpc-client": "^5.0.2",
     "mongoose": "^8.8.0",
+    "multiformats": "^13.3.1",
     "node-cache": "^5.1.2",
     "ws": "^8.18.0"
   },
