--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
     "mongoose": "^8.8.1",
     "multiformats": "^13.3.1",
     "node-cache": "^5.1.2",
+    "web3.storage": "^4.5.5",
     "ws": "^8.18.0"
   },
   "packageManager": "pnpm@9.12.2+sha512.22721b3a11f81661ae1ec68ce1a7b879425a1ca5b991c975b074ac220b187ce56c708fe5db69f4c962c989452eee76c82877f4ee80f474cebd61ee13461b6228"
