--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,8 @@
     "@ethersproject/providers": "^5.7.2",
     "@headlessui/react": "^2.2.0",
     "@radix-ui/react-accordion": "^1.2.1",
+    "@radix-ui/react-navigation-menu": "^1.2.1",
+    "@radix-ui/react-progress": "^1.1.0",
     "@radix-ui/react-scroll-area": "^1.2.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@reduxjs/toolkit": "^2.3.0",
@@ -35,6 +37,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-progressbar": "^15.4.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.27.0",
     "react-svg": "^16.1.34",
