--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,11 +36,13 @@
     "onchainkit": "^0.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-google-recaptcha": "^3.1.0",
     "react-icons": "^5.3.0",
     "react-progressbar": "^15.4.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.27.0",
     "react-svg": "^16.1.34",
+    "react-toastify": "^10.0.6",
     "scrollbar": "^0.1.12",
     "shadcn-ui": "^0.9.3",
     "tailwind-merge": "^2.5.4",
